[tool.poetry]
name = "naas-models"
version = "0.1.0"
description = "Library containing all models used in the naas ecosystem. You can use this library to know how to talk to our micro services."
authors = ["Maxime Jublou <maxime@naas.ai>"]
readme = "README.md"
packages = [{include = "naas_models"}]

[tool.poetry.dependencies]
python = "^3.9"
protobuf = ">=3.19.0,<3.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
