[tool.poetry]
name = "naas-models"
version = "0.1.0"
description = "Library containing all models used in the naas ecosystem. You can use this library to know how to talk to our micro services."
authors = ["Maxime Jublou <maxime@naas.ai>"]
readme = "README.md"
packages = [{include = "naas_models"}]
license = "AGPL-3.0-or-later"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[tool.poetry.dependencies]
python = "^3.9"
protobuf-to-pydantic = {version = "0.2.6.2", extras = ["mypy-protobuf"]}
protobuf = "^5.26.1"
pydantic = "^2.0"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.63.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
